--- a/contact/templates/contact/contact.html
+++ b/contact/templates/contact/contact.html
@@ -10,7 +10,7 @@
                 <div class="col-sm-6 text-light">
                     <ul class="lista-horarios text-start">
                         <li>
-                            Horarios de atencion:
+                            HORARIOS DE ATENCION:
                         </li>
                         <br>
                         <li class="title">
@@ -46,9 +46,9 @@
 
             </div>
 
-            <a style="text-decoration: none" href="https://wa.me/3743567768/?text=tu%20texto%20personalizado"
+            <a style="text-decoration: none" href="https://wa.me/3743508561/?text=tu%20texto%20personalizado"
                 target="_blank">
-                <div class="container text-light m-0 rounded " style="background-color: rgb(215, 92, 184)">
+                <div class="turno-div container text-light m-0 rounded " style="background-color: rgb(215, 92, 184)">
                     <h2 class="p-4" style="color:aliceblue"> Consigue tu turno por WhatsApp <i class="fab fa-whatsapp">
                         </i></h2>
             </a>
