--- a/core/static/core/css/styles.css
+++ b/core/static/core/css/styles.css
@@ -51,8 +51,14 @@
     transition: opacity 1.5s, transform 2s;
   }
 
+#div-right{
+    opacity: 0;
+    transform: translateX(+100%);
+    transition: opacity 1.5s, transform 2s;
+}
+
 .nav-hiden{
-    transform:translateY(-80px);
+    transform:translateY(-5 rem);
 }
 
 h1{
@@ -151,7 +157,11 @@ footer{
 
 .lista-horarios .title{
     color:rgb(214, 214, 214);
-    font-size: 1rem;
+    font-size: 1rem;}
+
+.turno-div:hover{
+    opacity: 0.7;
+    color:rgb(12, 10, 11); 
 }
 
 .fab {
@@ -161,6 +171,7 @@ footer{
     text-align: center;
     text-decoration: none;
     }
+
     
 .fab:hover {
 opacity: 0.7;
@@ -207,6 +218,7 @@ color: white;
     width: 100vw;
     padding:1.25rem 0;
     justify-content: center;
+    text-align: center !important;
 }
 
 .footer-bottom p{
