--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -32,9 +32,9 @@
   <!-- Navbar -->
   <nav class="navegation navbar navbar-expand-lg bg-body-tertiary navbar-dark fixed-top">
     <div class="container-fluid ">
-      <!-- <a class="navbar-brand {% if request.path == '/' %}active{% endif %}" href="{% url 'home' %}">
-          <img src="{% static 'core/img/logo.png' %}" alt="logo" width="45" height="45"> 
-        </a>-->
+      <a class="navbar-brand {% if request.path == '/' %}active{% endif %}" href="{% url 'home' %}">
+        Peluqueria Marlene
+      </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -76,12 +76,12 @@
       <h3> Marlene Peluquería </h3>
       <p>Sed pulvinar blandit elit id venenatis. Ut eget lacus neque. Nullam justo quam, efficitur nec turpis vitae,
         efficitur posuere lig</p>
-      <ul class="socials">
+      <ul class="socials p-0">
         <li><a href="https://instagram.com/peluqueriamarlene?igshid=MzRlODBiNWFlZA==" target="_blank"><i
               class="fa-brands fa-instagram"></i></a> </li>
       </ul>
     </div>
-    <div class="footer-bottom ">
+    <div class="footer-bottom">
       <p class="m-0">copyright © 2023 designed by <span>Miguel Angel Neumann</span></p>
       <ul class="socials p-0 m-0">
         <li><a href="https://www.linkedin.com/in/miguel-angel-neumann-a45639229/" target="_blank"><i
